having issues aligning NB with container

--- a/Labs/chirpus-site/style.css
+++ b/Labs/chirpus-site/style.css
@@ -3,17 +3,19 @@
     margin: 0;
     padding: 0;
 }
-/* Need to figure out how to add Google fonts */
+
 body{
     font-family: 'Open Sans', sans-serif;
  background-color: #f9fafc;
  box-sizing: border-box;
 }
+/* Need to figure out how to align NB better */
 nav{
 display: flex;
 flex-direction: column;
 padding-bottom: 15px;
-margin-left:75px;
+
+/* margin-left:60px; */
 }
 .container{
     display: flex;
@@ -66,6 +68,4 @@ color: #fff;
 padding: .5rem;
 font-size: .7rem;
 border-radius: 15px;
-
-
 }
